Require explicit digest-pinned runtime sources
Co-authored-by: Copilot App <223556219+Copilot@users.noreply.github.com>

Copilot-Session: 0554ba45-184b-4a7f-9826-08c87e147028